2003-09-30  Richard Williamson   <rjw@apple.com>

	Attempt to find a reasonable font using a simple string matching heuristic if 
	none of the fonts actually specified are found.  In particular we will use
	Geeza Pro if "arabic", "urdu", or "pashto" is contained (case-insensitive) in
	any of the requested font family names.  Geeza Pro is a much better fallback
	font for Arabic (and variant languages) than Helvetica.

        Reviewed by Chris.

        * WebCoreSupport.subproj/WebTextRendererFactory.m:
        (-[WebTextRendererFactory fontWithFamilies:traits:size:]):

2003-09-30  John Sullivan  <sullivan@apple.com>

        - fixed 3045617 -- Make Text Bigger/Smaller doesn't affect non-html documents.
        
        I added an internal protocol inside WebKit to make this work, and implemented
        it for plain text and RTF. I also slightly shuffled the existing code to
        handle this for HTML so that it goes through the new protocol in that case
        also.

        Reviewed by NOBODY (OOPS!).

        * WebView.subproj/WebDocumentInternal.h: Added.
       	New header file, holds definition of 
	_web_WebDocumentTextSizing protocol.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _textSizeMultiplierChanged]):
        if the document view conforms to the new protocol,
        tell it that the multiplier has changed. Also, don't
        tell the bridge here anymore; let WebHTMLView do that.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _updateTextSizeMultiplier]):
        tell the bridge here instead of having WebFrame do so
        (-[WebHTMLView viewDidMoveToSuperview]):
        call _updateTextSizeMultiplier (in case it changed while we were switched out)
        (-[WebHTMLView _web_textSizeMultiplierChanged]):
        call _updateTextSizeMultiplier
        
        * WebView.subproj/WebTextRepresentation.m:
        (-[WebTextRepresentation receivedData:withDataSource:]):
        