@@ -1,3 +1,13 @@
+2003-10-01  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3440804, broken scrollbars in downloads window.  Make Auto be the default
+	value in the enum, so that all scrollviews will be automatically initialized to be
+	auto.
+	
+        Reviewed by cblu
+
+        * WebView.subproj/WebDynamicScrollBarsView.m:
+
 2003-09-30  Richard Williamson   <rjw@apple.com>
 
 	Attempt to find a reasonable font using a simple string matching heuristic if 
